[package]
name = "gcoin"
version = "0.1.0"
edition = "2021"
description = "A great coin"
license-file = "LICENSE"
authors = ["Jason Qin"]

[dependencies]
openssl = "0.10.40"
pem = "1.0.2"
log = "*"
ripemd = "0.1.1"
hex-literal = "0.3.4"
rsa = "0.6.1"
tokio = { version = "1", features = ["full"] }
tui = "0.18.0"
crossterm = "0.23"
rand = "0.8.5"
argh = "0.1.7"
